# Kera

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  imgui.ini  run-clang-format.ps1  run-clang-tidy.ps1
.github/workflows/: build.yml  release.yml
cmake/: ReflectSlangShaderContracts.cmake  RunKeraSampleSmoke.cmake  ValidateCopyrightHeaders.cmake  ValidateLoggingRules.cmake  ValidateRendererAbiHeaders.cmake  ValidateSamplePublicApiUsage.cmake  ValidateSlangShaderContracts.cmake
docs/: RENDERER_ABI.md  RENDERER_API.md  VALIDATION.md
include/kera/: kera.h  result.h  types.h
include/kera/core/: audio.h  input.h  window.h
include/kera/renderer/: abi.h  api.h  buffer.h  command_buffer.h  descriptor_contracts.h  descriptors.h  device.h  factory.h  framebuffer.h  gltf_loader.h  image.h  instance.h  interfaces.h  ktx_loader.h  physical_device.h  pipeline.h  reflection_contracts.h  render_pass.h  resource_registry.h  result.h  shader.h  slang_compiler.h  slang_reflection.h  surface.h  swapchain.h  vulkan_renderer.h
include/kera/renderer/backend/vulkan/: layout_utils.h  vulkan_renderer.h
include/kera/utilities/: file_utils.h  json.h  logger.h  validation.h
samples/: CMakeLists.txt  basic_triangle_sample.cpp  basic_triangle_sample.h  compute_sample.cpp  compute_sample.h  damaged_helmet_ibl_lighting_sample.cpp  damaged_helmet_ibl_lighting_sample.h  damaged_helmet_sample.cpp  damaged_helmet_sample.h  instanced_triangle.cpp  instanced_triangle.h  instanced_triangle_many_lights_sample.cpp  instanced_triangle_many_lights_sample.h  instanced_triangle_sample.cpp  instanced_triangle_sample.h  main.cpp  ppm_metrics.cpp  render_context.cpp  render_context.h  sample_utils.cpp  sample_utils.h  samples.cpp  samples.h  stats_overlay.cpp  stats_overlay.h
samples/assets/gltf/DamagedHelmet/: ATTRIBUTION.md
samples/assets/ibl/autum_field_puresky/: ATTRIBUTION.md  autumn_field_puresky_4k.exr
samples/config/: basic_triangle_sample.json
samples/shaders/: damaged_helmet.slang  damaged_helmet_ibl.slang  instanced_triangle.slang  instanced_triangle_many_lights.slang  triangle.frag.slang  triangle.slang  triangle.vert.slang
src/core/: audio.cpp  input.cpp  sdl_input_utils.cpp  sdl_input_utils.h  window.cpp
src/renderer/: api.cpp  buffer.cpp  command_buffer.cpp  device.cpp  factory.cpp  framebuffer.cpp  gltf_loader.cpp  image.cpp  instance.cpp  ktx_loader.cpp  physical_device.cpp  pipeline.cpp  reflection_contracts.cpp  render_pass.cpp  shader.cpp  slang_compiler.cpp  slang_reflection.cpp  surface.cpp  swapchain.cpp  vulkan_renderer.cpp
src/utilities/: file_utils.cpp  json.cpp  logger.cpp  validation.cpp
tests/: CMakeLists.txt  gltf_loader_tests.cpp  logger_tests.cpp  reflection_contracts_tests.cpp  renderer_lifecycle_tests.cpp  renderer_public_api_tests.cpp  repo_policy_tests.cpp  slang_reflection_metadata_tests.cpp
tools/: CaptureKeraFrame.ps1
